# harbour-sailfishconnect

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  SailfishConnect.pro  bad-style.xml  conanfile.txt  habour-sailfishconnect.desktop  harbour-sailfishconnect.desktop  harbour-sailfishconnect.pro
.circleci/: config.yml
.tx/: config
app/: CMakeLists.txt  Plugins.cmake  app.pro  harbour-sailfishconnect.desktop  harbour-sailfishconnect.service
app/keyboard-layouts/: english.json  german.json
app/qml/: harbour-sailfishconnect.qml
app/qml/components/: AlbumArt.qml  ClipboardUi.qml  EncryptionInfo.qml  IconListItem.qml  ImageListItem.qml  Key.qml  KeyboardChangeLayoutPage.qml  KeyboardPage.qml  LabelWithDescription.qml  MprisUi.qml  PluginAction.qml  RemoteKeyboard.qml  ShareUi.qml  Touchpad.qml  TouchpadPage.qml
app/qml/cover/: CoverPage.qml
app/qml/pages/: AboutPage.qml  AddCustomDeviceDialog.qml  DeviceListPage.qml  DevicePage.qml  DevicePluginsPage.qml  EncryptionInfoPage.qml  KeyboardChangeLayoutPage.qml  KeyboardPage.qml  RemoteCommandsPage.qml  RemoteVolumePage.qml  SettingsPage.qml  TouchpadPage.qml  TransfersPage.qml
app/qml/pages/pluginConfigs/: AddCommandDialog.qml  RunCommandsConfigPage.qml  RunCommandsPage.qml  ShareConfigPage.qml
app/src/: appdaemon.cpp  appdaemon.h  sailfishconnect-config.cpp.in  sailfishconnect-config.h  sailfishconnect.cpp  sailfishconnect.h  systeminfo.h  ui.cpp  ui.h
app/src/dbus/: kdeconnect.cpp  kdeconnect.h  ofono.cpp  ofono.h  servicewatcher.cpp  servicewatcher.h  tuple.h
app/src/helper/: contactsmanager.cpp  contactsmanager.h  cpphelper.h  filehelper.h  functools.h  jobsnotificator.cpp  jobsnotificator.h  keyboardlayoutprovider.cpp  keyboardlayoutprovider.h  vcardbuilder.cpp
app/src/io/: copyjob.cpp  copyjob.h  jobmanager.cpp  jobmanager.h
app/src/js/: hostaddressvalidator.cpp  hostaddressvalidator.h  humanize.cpp  humanize.h  path.cpp  path.h  process.cpp  process.h  qmlregister.cpp  qmlregister.h  url.cpp  url.h
app/src/models/: devicelistmodel.cpp  devicelistmodel.h  devicepluginsmodel.cpp  devicepluginsmodel.h  jobsmodel.cpp  jobsmodel.h  mprisplayersmodel.cpp  mprisplayersmodel.h  sortfiltermodel.cpp  sortfiltermodel.h  stringlistmodel.cpp  stringlistmodel.h
app/src/plugins/battery/: batteryplugin.cpp  batteryplugin.h  metadata.json
app/src/plugins/clipboard/: clipboardplugin.cpp  clipboardplugin.h
app/src/plugins/contacts/: contactsplugin.cpp  contactsplugin.h  contactsreader.cpp  contactsreader.h  contactsstore.cpp  contactsstore.h  metadata.json  vcardbuilder.cpp  vcardbuilder.h
app/src/plugins/mprisremote/: albumartcache.cpp  albumartcache.h  metadata.json  mprisremoteplugin.cpp  mprisremoteplugin.h
app/src/plugins/ping/: pingplugin.cpp  pingplugin.h
app/src/plugins/remoteinput/: metadata.json  remoteinput.cpp  remoteinput.h
app/src/plugins/remotekeyboard/: keyboardlayoutprovider.cpp  keyboardlayoutprovider.h  metadata.json  remotekeyboard.cpp  remotekeyboard.h
app/src/plugins/sendnotifications/: notificationslistener.cpp  notificationslistener.h  notifyingapplication.cpp  notifyingapplication.h  sendnotificationsplugin.cpp  sendnotificationsplugin.h
app/src/plugins/share/: shareplugin.cpp  shareplugin.h
app/src/plugins/telepathy/: telepathyplugin.cpp  telepathyplugin.h
app/src/plugins/telephony/: metadata.json  telephonyplugin.cpp  telephonyplugin.h
app/src/plugins/touchpad/: touchpadplugin.cpp  touchpadplugin.h
app/src/ui/: devicelistmodel.cpp  devicelistmodel.h  devicepluginsmodel.cpp  devicepluginsmodel.h  filtervalueproxymodel.cpp  filtervalueproxymodel.h  jobsmodel.cpp  jobsmodel.h  keyboardlayoutprovider.cpp  keyboardlayoutprovider.h  mprisplayersmodel.cpp  mprisplayersmodel.h  sortfiltermodel.cpp  sortfiltermodel.h
dev/: build-armv7hl-shell  build-env-shell  build-env-ssh  build-shell  get-sdk-install-folder  map_compile_commands.py  run-on-targets  sf
kdeconnect/: CMakeLists.txt
lib/: lib.pri  lib.pro
plugins/: CMakeLists.txt
plugins/batteryreport/: CMakeLists.txt  batteryreportplugin.cpp  batteryreportplugin.h  com.nokia.mce.request.xml  com.nokia.mce.signal.xml  sailfishconnect_batteryreport.json
plugins/clipboard/: CMakeLists.txt  clipboardplugin.cpp
plugins/contacts/: CMakeLists.txt  contactsplugin.cpp  contactsplugin.h  sailfishconnect_contacts.json
plugins/sf_clipboard/: CMakeLists.txt  clipboardplugin.cpp  clipboardplugin.h  sailfishconnect_clipboard.json
plugins/sf_mprisremote/: CMakeLists.txt  albumartcache.cpp  albumartcache.h  mprisremoteplugin.cpp  mprisremoteplugin.h  sailfishconnect_mprisremote.json
plugins/sf_remotekeyboard/: CMakeLists.txt  keyboardlayoutprovider.cpp  remotekeyboardplugin.cpp  remotekeyboardplugin.h  sailfishconnect_remotekeyboard.json
plugins/sf_sendnotifications/: CMakeLists.txt  notificationslistener.cpp  notificationslistener.h  notifyingapplication.cpp  notifyingapplication.h  sailfishconnect_sendnotifications.json  sendnotificationsplugin.cpp  sendnotificationsplugin.h
plugins/sf_share/: CMakeLists.txt  copyjob.cpp  downloadjob.cpp  filehelper.cpp  shareplugin.cpp  shareplugin.h
plugins/sftpserver/: CMakeLists.txt  sailfishconnect_sftpserver.json  sftpserver.cpp  sftpservercommands.cpp  sftpservercommands.h  sftpserverplugin.cpp  sftpserverplugin.h  ssh.h
plugins/share/: CMakeLists.txt  downloadjob.cpp  sailfishconnect_share.json  shareplugin.cpp
plugins/telepathy/: CMakeLists.txt  sailfishconnect_telepathy.json  telepathyplugin.cpp  telepathyplugin.h
plugins/telephony/: CMakeLists.txt  ofono.cpp  sailfishconnect_telephony.json  telephonyplugin.cpp  telephonyplugin.h
pluginscommon/: CMakeLists.txt  contactsmanager.cpp  contactsmanager.h  copyjob.cpp  downloadjob.cpp  downloadjob.h  filehelper.cpp  filehelper.h  vcardbuilder.cpp  vcardbuilder.h
qml/: SailfishConnect.qml  harbour-sailfishconnect.qml
rpm/: SailfishConnect.changes.in  SailfishConnect.yaml  harbour-sailfishconnect.changes  harbour-sailfishconnect.changes.run.in  harbour-sailfishconnect.spec  harbour-sailfishconnect.yaml  (+1 more)
(+257 files in other folders)
